<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.detailTeams.AboutTeams">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/activity_aboutteams_appbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/team_collapse_toolbar"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:contentScrim="?attr/colorPrimary"
                app:titleEnabled="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <android.support.v7.widget.Toolbar
                    android:id="@+id/aboutteams_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.PopupOverlay"/>
            <LinearLayout
                    android:id="@+id/layout_teams_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="parallax"
                    android:orientation="vertical">
                <ImageView
                        android:contentDescription="@string/aboutteams_teambadge_contentdesc"
                        android:layout_marginTop="?attr/actionBarSize"
                        android:id="@+id/activity_aboutteams_teambadges"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        tools:src="@drawable/ic_football_soccer"
                        android:layout_gravity="center"
                />
                <TextView
                        android:id="@+id/activity_aboutteams_teamnames"
                        android:layout_marginTop="10dp"
                        android:textColor="@android:color/white"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        tools:text="Barcelona"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/activity_aboutteams_teamformedyear"
                        android:textColor="@android:color/white"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        tools:text="1999"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/activity_aboutteams_teamstadium"
                        android:textColor="@android:color/white"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        tools:text="Camp Nou"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </android.support.design.widget.CollapsingToolbarLayout>
        <android.support.design.widget.TabLayout
                android:layout_below="@id/layout_teams_holder"
                android:id="@+id/activity_teamsabout_tablayout"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:tabGravity="fill">
            <android.support.design.widget.TabItem
                    android:id="@+id/aboutteams_overview"
                    android:text="@string/aboutteams_tab_title_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <android.support.design.widget.TabItem
                    android:id="@+id/aboutteams_details"
                    android:text="@string/aboutteams_tab_title_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <android.support.design.widget.TabItem
                    android:id="@+id/aboutteams_player"
                    android:text="@string/aboutteams_tab_title_player"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/activity_aboutteams_swiperefresh"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <android.support.v4.view.ViewPager
                android:id="@+id/activity_aboutteams_conteiner"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </android.support.v4.widget.SwipeRefreshLayout>
</android.support.design.widget.CoordinatorLayout>