...
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.detailMatchs.DetailMatchActivity">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/activity_detail_match_appbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:elevation="0dp"
            android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/detail_match_collapsing"
...

        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/activity_detail_match_swiperefresh"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_below="@id/activity_detail_match_appbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <include layout="@layout/content_detail_match"/>
...
