<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".activities.splash.SplashScreenActivity">
    <RelativeLayout
            android:padding="16dp"
            android:id="@+id/splash_relative_loading"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">
        <TextView
                android:text="@string/splash_string_loading_data"
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:layout_centerVertical="true"
                android:textStyle="bold|italic"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_height="wrap_content"/>
        <ProgressBar
                android:id="@+id/splash_progress_bar"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_width="40dp"
                android:layout_height="40dp"/>
    </RelativeLayout>
</RelativeLayout>