...
                app:layout_scrollFlags="scroll|enterAlways"
                app:contentScrim="?attr/colorPrimary"
                android:fitsSystemWindows="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:layout_collapseMode="parallax"
                    app:popupTheme="@style/AppTheme.PopupOverlay"/>

...
            android:orientation="vertical">
        <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@drawable/shadow"/>
        <android.support.design.widget.BottomNavigationView
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                app:itemIconTint="@drawable/nav_item_color_state"
                app:itemTextColor="@drawable/nav_item_color_state"
                app:menu="@menu/bottom_navigation_menu"/>
...
